# ParaAegis

./: .gitignore  main.py  pyproject.toml
src/: test.py
src/ParaAegis/: clients.py  protocol_zoo.py
src/ParaAegis/ClientZoo/: BaseClient.py
src/ParaAegis/client_zoo/: BaseClient.py  DpAvgClient.py  FedAvgClient.py  HeAvgClient.py  ParaAegisClient.py  __init__.py
src/ParaAegis/protocol_zoo/: FedAvgProtocol.py
src/ParaAegis/server_zoo/: BaseServer.py  FedAvgServer.py  HeAvgServer.py  ParaAegisServer.py  __init__.py
src/ParaAegis/training/: __init__.py  trainer.py
src/ParaAegis/training/dataset/: __init__.py  cifar.py  factory.py  fmnist.py  food101.py  imagenette.py
src/ParaAegis/training/datasplitter/: __init__.py  base.py  dirichlet.py  factory.py  iid.py
src/ParaAegis/training/model/: __init__.py  cnn.py  factory.py
src/ParaAegis/utils/: __init__.py  dp.py  msg.py  supress.py
