[project]
name = "paraaegis"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "dp-accounting>=0.5.0",
  "msgpack>=1.1.1",
  "polars>=1.31.0",
  "ray[default]>=2.47.0",
  "swanlab>=0.6.4",
  "tenseal>=0.3.16",
  "timm>=1.0.15",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
